--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -140,3 +140,6 @@
   &__icon
     position: absolute
     right: 0
+  
+a[href^="tel:+52566138"]
+  white-space: nowrap
